# ranran_wanji

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  update.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
public/: splashscreen.html
releases/: 更新.txt
scripts/: build-runtime-assets.cjs  build-zip.cjs  update-date-version.cjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: generate_codename_model_map.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/adb/: core.rs
src-tauri/src/commands/: apps.rs  boot_patch.rs  device.rs  downloader.rs  file_manager.rs  github_apk.rs  hyperos.rs  miuier.rs  mod.rs  payload.rs  rom_client.rs  rom_data.rs  rom_region.rs  runtime_assets.rs  system.rs  xfu.rs  xiaomirom.rs
src-tauri/src/commands/boot_patch/: apatch_key.rs  auto_source.rs  common.rs  constants.rs  device_io.rs  flash_package.rs  partition.rs  patch_kits.rs  payload.rs  resources.rs  types.rs  workflow.rs
src-tauri/src/models/: device_info.rs
src-tauri/src/utils/: mod.rs  parse.rs  process.rs
src/api/: bootPatch.js  device.js  githubApk.js  hyperosFans.js  miuier.js  payload.js  scrcpy.js  xfu.js  xiaomirom.js
src/assets/: main.scss
src/config/: icons.js  loadRomsData.js
src/router/: index.js
src/utils/: date.js  debounce.js  deviceStore.js  request.js  romData.js  scrcpyStore.js  systemPaths.js  themeStore.js  updateStore.js  updater.js
src/views/about/: index.vue
(+122 files in other folders)
