[package]
name = "RanranToolkit"
version = "0.1.0"
description = "然然玩机工具箱 - 安卓调试工具"
authors = ["xiaowan"]
edition = "2021"
default-run = "RanranToolkit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["default", "macros", "process", "rt", "rt-multi-thread", "time"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Globalization", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }
zip = { version = "2", features = ["deflate"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
getrandom = "0.3"
sha2 = "0.10"
hex = "0.4"
